adjust to use traviss old cmake

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ addons:
 
 before_install:
   - ${CXX} --version;
+  - cmake --version;
 
 install:
   - if [ "$CXX" = "g++" ]; then export CXX="g++-4.9" CC="gcc-4.9"; fi
