--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,6 @@
 #
 
 cmake_minimum_required (VERSION 2.8)
-set (Boost_NO_BOOST_CMAKE ON) # hack for stupid old broken cmakes
 
 project (EigenLab CXX)
 
@@ -17,8 +16,8 @@ set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++11 -std=c++11")
 include_directories ("${PROJECT_SOURCE_DIR}")
 include_directories ("${EIGEN3_INCLUDE_DIRS}")
 
+add_definitions (-DDEBUG)
 add_executable (Test Test.cpp)
-target_compile_definitions (Test PRIVATE DEBUG)
 
 enable_testing ()
 add_test (basic Test)
