fix crash on unexpected paren

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -75,10 +75,10 @@ if (BUILD_FUZZ)
   ExternalProject_Get_Property (aflX source_dir)
   set (AFL_DIR "${source_dir}")
   message ("American Fuzzy Lop in ${AFL_DIR}")
-  set (CMAKE_C_COMPILER ${AFL_DIR}/afl-gcc)
-  set (CMAKE_CXX_COMPILER ${AFL_DIR}/afl-g++)
-  #set (CMAKE_C_COMPILER ${AFL_DIR}/afl-clang)
-  #set (CMAKE_CXX_COMPILER ${AFL_DIR}/afl-clang++)
+  #set (CMAKE_C_COMPILER ${AFL_DIR}/afl-gcc)
+  #set (CMAKE_CXX_COMPILER ${AFL_DIR}/afl-g++)
+  set (CMAKE_C_COMPILER ${AFL_DIR}/afl-clang)
+  set (CMAKE_CXX_COMPILER ${AFL_DIR}/afl-clang++)
 
   add_dependencies (EigenLab aflX)
 
